src/test/ui/borrowck/borrowck-consume-upcast-box.stderr
error[E0382]: use of moved value: `b`
  --> $DIR/borrowck-consume-upcast-box.rs:10:13
   |
LL | fn foo(b: Box<dyn Foo + Send>) {
   |        - move occurs because `b` has type `std::boxed::Box<dyn Foo + std::marker::Send>`, which does not implement the `Copy` trait
LL |     consume(b);
   |             - value moved here
LL |     consume(b);
   |             ^ value used here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
